solved the header text overlap issue and added responsiveness to about us page.

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -6,15 +6,23 @@ img {
 
 p {
   margin-right: 30px;
+  text-indent: 1.5em;
+}
+
+h1{
+  margin-bottom: 0px;
+  margin-top: 12px;
 }
 
 .people {
   display: flex;
+  flex-wrap:wrap;
   flex-direction: row;
   justify-content: space-between;
 }
 
 .picture {
+  max-width: 30%;
   margin: 20px 20px 20px 40px;
 }
 
@@ -22,6 +30,7 @@ p {
   display: flex;
   flex-direction: column;
   margin-left: 40px;
+  max-width: 60%;
 }
 
 .our-names {
