--- a/css/page_template.css
+++ b/css/page_template.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 750px) {
+ .Logo {
+   display: none;
+ }
+}
+
 body {
   display:flex;
   position: absolute;
@@ -98,7 +104,7 @@ p {
  .Name-Header{
    width:100%;
    height: 150px;
-   line-height: 20px;
+   line-height: 75px;
  }
 
  .Logo{
@@ -107,8 +113,11 @@ p {
    position: absolute;
    margin-left: 40px;
  }
+
  .Game-Name{
    font-family: 'Creepster', cursive;
-   text-align: center;
+   font-size: 60px;
    vertical-align: middle;
+   text-align: center;
+   align-self: center;
  }
